fix(info-tile): support dark mode properly

--- a/src/components/info-tile/info-tile.scss
+++ b/src/components/info-tile/info-tile.scss
@@ -90,11 +90,22 @@ a {
     border-radius: var(--info-tile-border-radius, 1rem);
     background-color: var(
         --info-tile-background-color,
-        rgb(var(--contrast-100))
+        var(--lime-elevated-surface-background-color)
     );
 
     &.is-clickable {
-        @include mixins.is-elevated-clickable;
+        @include mixins.is-elevated-clickable(
+            $background-color:
+                var(
+                    --info-tile-background-color,
+                    var(--lime-elevated-surface-background-color)
+                ),
+            $background-color--hovered:
+                var(
+                    --info-tile-background-color,
+                    var(--lime-elevated-surface-background-color)
+                )
+        );
         @include mixins.visualize-keyboard-focus;
         cursor: pointer;
     }
